--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -97,6 +97,7 @@ h3 {
 #home-title {
 	left: 50%;
 	top: 50%;
+	background-color: #ccc;
 	background-repeat: no-repeat;
 	position: absolute;
 	border-radius: 50%;
