--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -61,6 +61,8 @@ h3 {
 }
 
 #post-info {
+	background-color: #eee;
+	color: #444;
 	font-size: 14px;
 	position: absolute;
 	z-index: 2;
@@ -72,7 +74,6 @@ h3 {
 }
 
 #post-info h2 {
-	background-color: #ccc;
 	opacity: 0.75;
 	font-style: italic;
 	font-size: 24px;
@@ -98,7 +99,7 @@ h3 {
 #home-title {
 	left: 50%;
 	top: 50%;
-	background-color: #ccc;
+	background-color: #eee;
 	background-repeat: no-repeat;
 	position: absolute;
 	border-radius: 50%;
