--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -66,6 +66,7 @@ h3 {
 	font-size: 14px;
 	position: absolute;
 	z-index: 2;
+	opacity: 0.75;
 }
 
 #post-info h1 {
@@ -223,6 +224,9 @@ h3 {
 	border-bottom: 0px;
 }
 
+a.site-title {
+	color: #333;
+}
 a.site-title:hover, .copyright a:hover {
 	text-decoration: underline;
 }
