--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,7 @@ article: true
 		{% if page.quote %}
 			<h2>{{ page.quote }}</h2>
 		{% endif %}
-		<a class="site-title" href="{{ site.baseurl }}"><div class="site-icon-small" style="background-image: url({{ site.icon }});"></div>NoPressuRe</a>, in {{ page.date | date_to_long_string }}
+		<a class="site-title" href="{{ site.baseurl }}"><div class="site-icon-small" style="background-image: url({{ site.icon }});"></div>{{ site.title }}</a>, in {{ page.date | date_to_long_string }}
 	</div>
 	{% if page.image.source %}
 	<div id="img-info" data-stellar-ratio="0.5">
