--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -61,8 +61,7 @@ h3 {
 }
 
 #post-info {
-	background-color: #eee;
-	color: #444;
+	background-color: #444;
 	font-size: 14px;
 	position: absolute;
 	z-index: 2;
@@ -223,10 +222,6 @@ h3 {
 
 #article-img a, #article-img a:hover {
 	border-bottom: 0px;
-}
-
-.site-title a {
-	color: #444;
 }
 
 a.site-title:hover, .copyright a:hover {
