--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -61,7 +61,8 @@ h3 {
 }
 
 #post-info {
-	background-color: #444;
+	padding-left: 10px;
+	background-color: rgba(26, 26, 26, 0.35);
 	font-size: 14px;
 	position: absolute;
 	z-index: 2;
