--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -489,6 +489,7 @@ pre code {
 }
 
 .copyright {
+	background-color: rgba(26, 26, 26, 0.55);
 	color: inherit;
 	font-size: 14px;
 	text-transform: uppercase;
