--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -67,7 +67,7 @@ h3 {
 	position: absolute;
 	z-index: 2;
 	border-radius: 5px;
-	border: 1px solid #eee;
+	border: 1px solid #ccc;
 }
 
 #post-info h1 {
@@ -105,6 +105,7 @@ h3 {
 	background-repeat: no-repeat;
 	position: absolute;
 	border-radius: 50%;
+	border: 1px solid #ccc;
 	transition-duration: .25s;
 	z-index: 1;
 }
