--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -148,7 +148,8 @@ h3 {
 	width: auto;
 	height: auto;
 	left: 50%;
-	margin-left: -20px;
+	margin-left: -25px;
+	padding-left: 5px;
 	position: absolute;
 	text-align: center;
 	z-index: 2;
